# qtProjects

./: README.md
qtLocalServer/: CMakeLists.txt  README.md
qtLocalServer/client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qtLocalServer/server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qtLogger/: CMakeLists.txt  README.md
qtLogger/log4Qt/: CMakeLists.txt  loggerobject.cpp  loggerobject.h  loggerobjectprio.cpp  loggerobjectprio.h  loggerstatic.cpp  loggerstatic.h  main.cpp
qtLogger/messageHandler/: CMakeLists.txt  loggingcategories.cpp  loggingcategories.h  main.cpp
qtService/: CMakeLists.txt  README.md
qtService/examples/: CMakeLists.txt  main.cpp
qtService/qtservice/: CMakeLists.txt  qtservice_win.cpp
